[package]
name = "beacon-core"
version = "1.8.0"
edition = "2021"

[dependencies]
futures = { workspace=true}
anyhow = { workspace=true}
tempfile = { workspace=true}
serde = { workspace=true}
serde_json = { workspace=true}
utoipa = { workspace=true}
async-trait = { workspace=true }
datafusion = { workspace=true }
datafusion-federation = { workspace=true }
geodatafusion = { workspace=true }
arrow = { workspace=true}
tokio = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-stream = {workspace = true}
parking_lot = { workspace = true}
sysinfo = {workspace = true}
uuid = {workspace = true}
chrono = { workspace = true }
cast = {workspace = true}
geojson = {workspace = true}

tracing = { workspace=true}
# Local dependencies
beacon-auth = { path = "../beacon-auth" }
beacon-common = { path = "../beacon-common" }
beacon-config = { path = "../beacon-config" }
beacon-arrow-netcdf = { path = "../beacon-file-formats/beacon-arrow-netcdf" }
beacon-arrow-odv = { path = "../beacon-file-formats/beacon-arrow-odv" }
beacon-arrow-tiff = { path = "../beacon-file-formats/beacon-arrow-tiff" }
beacon-functions = { path = "../beacon-functions" }
beacon-data-lake = { path = "../beacon-data-lake" }
beacon-arrow-ipc = { path = "../beacon-file-formats/beacon-arrow-ipc" }
beacon-arrow-csv = { path = "../beacon-file-formats/beacon-arrow-csv" }
beacon-arrow-parquet = { path = "../beacon-file-formats/beacon-arrow-parquet" }
beacon-arrow-geoparquet = { path = "../beacon-file-formats/beacon-arrow-geoparquet" }
beacon-arrow-bbf = { path = "../beacon-file-formats/beacon-arrow-bbf" }
beacon-arrow-zarr = { path = "../beacon-file-formats/beacon-arrow-zarr" }
beacon-object-storage = { path = "../beacon-object-storage" }
beacon-datafusion-ext = { path = "../beacon-datafusion-ext" }
beacon-iceberg = { path = "../beacon-file-formats/beacon-iceberg" }
beacon-lance = { path = "../beacon-file-formats/beacon-lance" }
beacon-delta = { path = "../beacon-file-formats/beacon-delta" }
beacon-sql-databases = { path = "../beacon-sql-databases" }

[features]
# Exposes Runtime::new_with_in_memory_auth so other crates' tests can build a
# runtime with an ephemeral (non-persistent) auth context.
test-util = []

[dev-dependencies]
deltalake = { workspace = true }
url = {workspace = true}
# Self-reference enabling `test-util` for this crate's own integration tests
# (tests/), so they can build an ephemeral in-memory-auth runtime.
beacon-core = { path = ".", features = ["test-util"] }
