[package]
name = "beacon-data-lake"
version = "1.7.2"
edition = "2024"

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
anyhow = { workspace = true }

object_store = { workspace = true }
url = "2.5.4"
tempfile = "3.15.0"

typetag =  { workspace=true}
async-trait = { workspace=true}
serde = { workspace = true }
serde_json = { workspace = true }

parking_lot = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

beacon-common = { path = "../beacon-common" }
beacon-object-storage = { path = "../beacon-object-storage" }
beacon-formats = { path = "../beacon-file-formats/beacon-formats" }
beacon-datafusion-ext = { path = "../beacon-datafusion-ext" }
beacon-iceberg = { path = "../beacon-iceberg" }