[package]
name = "beacon-data-lake"
version = "1.7.3"
edition = "2024"

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
anyhow = { workspace = true }

object_store = { workspace = true }
url = "2.5.4"
tempfile = "3.15.0"

typetag =  { workspace=true}
async-trait = { workspace=true}
serde = { workspace = true }
serde_json = { workspace = true }

parking_lot = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

beacon-common = { path = "../beacon-common" }
beacon-object-storage = { path = "../beacon-object-storage" }
beacon-datafusion-ext = { path = "../beacon-datafusion-ext" }
beacon-iceberg = { path = "../beacon-iceberg" }

# File-format crates registered by `file_formats()`
beacon-arrow-ipc = { path = "../beacon-file-formats/beacon-arrow-ipc" }
beacon-arrow-csv = { path = "../beacon-file-formats/beacon-arrow-csv" }
beacon-arrow-parquet = { path = "../beacon-file-formats/beacon-arrow-parquet" }
beacon-arrow-bbf = { path = "../beacon-file-formats/beacon-arrow-bbf" }
beacon-arrow-netcdf = { path = "../beacon-file-formats/beacon-arrow-netcdf" }
beacon-arrow-atlas = { path = "../beacon-file-formats/beacon-arrow-atlas" }
beacon-arrow-tiff = { path = "../beacon-file-formats/beacon-arrow-tiff" }
beacon-arrow-zarr = { path = "../beacon-file-formats/beacon-arrow-zarr" }
beacon-arrow-geoparquet = { path = "../beacon-file-formats/beacon-arrow-geoparquet" }