[package]
name = "beacon-datafusion-ext"
version = "1.6.0"
edition = "2024"

[dependencies]
datafusion = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typetag =  { workspace=true}
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
ordered-float = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

beacon-common = { path = "../beacon-common" }

[dev-dependencies]
tokio = { workspace = true }