[package]
name = "beacon-datafusion-ext"
version = "1.7.2"
edition = "2024"

[dependencies]
datafusion = { workspace = true }
datafusion-federation = { workspace = true }
arrow-flight = { workspace = true, features = ["flight-sql"] }
tonic = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typetag =  { workspace=true}
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
ordered-float = { workspace = true }
indexmap = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

beacon-common = { path = "../beacon-common" }
beacon-object-storage = { path = "../beacon-object-storage" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }