[package]
name = "beacon-formats"
version = "1.5.2"
edition = "2024"

[dependencies]
arrow = { workspace = true }
object_store = { workspace = true }
datafusion = { workspace = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geoparquet = { workspace = true }
parquet = { workspace = true }
ordered-float = { workspace = true }

typetag =  { workspace=true}
async-trait = { workspace=true}
serde = { workspace = true }
serde_json = { workspace = true }

parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
lazy_static = { workspace = true }
moka = { workspace = true }
lru = { workspace = true }

async_zip = { version = "0.0.18", features = ["tokio", "zstd", "deflate"] }
tokio-util = "0.7.16"
zarrs_object_store = "0.5.0"
zarrs_storage = "0.4.0"
zarrs = {"version" = "0.22.2", features = ["async"]}

url = "2.5.4"
glob = "0.3.3"
which = "8.0.0"
num-traits = "0.2.19"
ndarray = { version = "0.17.1" }
once_cell = "1.21.3"
rlimit = "0.11.0"
chrono = { workspace = true }

beacon-common = { path = "../beacon-common" }
beacon-arrow-netcdf = { path = "../beacon-arrow-netcdf" }
beacon-arrow-odv = { path = "../beacon-arrow-odv" }
beacon-arrow-zarr = { path = "../beacon-arrow-zarr" }
beacon-config = { path = "../beacon-config" }
beacon-object-storage = { path = "../beacon-object-storage" }
nd-arrow-array = { git = "https://github.com/maris-development/nd-arrow-array.git", branch = "main", version = "1.3.0" }

# Add beacon binary format
beacon-binary-format = { path = "../beacon-binary-format" }

[dev-dependencies]
tempfile = "3.10"