[package]
name = "beacon-functions"
version = "1.5.4"
edition = "2021"

[dependencies]
datafusion = {workspace = true}
arrow = {workspace = true}
geo = "0.31"
geojson = "0.24.2"
wkt = { version = "0.12.0", features = ["geo-types"] }
strsim = "0.11.1"
anyhow = { workspace = true}
inventory = "0.3.18"
serde = { workspace = true}
serde_json = { workspace = true}
csv = "1.3.1"
object_store = { version = "0.12.3", features = ["aws"] }
once_cell = { workspace = true }

lazy_static = "1.5.0"
gsw = "0.2.2"
lru = "0.14.0"
ordered-float = "5.0.0"
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

beacon-common = { path = "../beacon-common" }
beacon-config = { path = "../beacon-config" }
beacon-formats = { path = "../beacon-formats" }
beacon-object-storage = { path = "../beacon-object-storage" }