[package]
name = "beacon-nd-arrow"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
arrow-ipc = { version = "^56.0.0", features = ["zstd"]}
criterion = { version = "0.5", default-features = false, features = ["rayon", "html_reports"] }
rand = "0.8"
tempfile = { workspace = true }

[[bench]]
name = "flatten"
harness = false

