[package]
name = "beacon-nd-arrow"
version = "0.2.0"
edition = "2024"
readme = "README.md"

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray", "dep:chrono"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
ndarray = { version = "0.17.1", optional = true }
anyhow = { workspace=true }
async-trait = { workspace=true }
futures = { workspace=true }
indexmap = { workspace=true }
pin-project = "1.1.10"
bytemuck = {version = "1.25.0", features = ["derive"]}
rkyv = { version = "0.8.10", features = ["pointer_width_64"] }

[dev-dependencies]
arrow-ipc = { workspace = true }
criterion = { version = "0.5", default-features = false, features = ["rayon", "html_reports"] }
rand = "0.8"
tempfile = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "flatten"
harness = false

[[bench]]
name = "broadcast"
harness = false

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "subset"
harness = false
