[package]
name = "beacon-object-storage"
version = "1.5.4"
edition = "2024"

[dependencies]
bumpalo = "3.19.1"
smol_str = { version = "0.3.4", features = ["serde"] }
notify = { version = "8.2.0", features = ["flume"] }
radix_trie = "0.3.0"
walkdir = "2.5.0"

parking_lot = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
thiserror = { workspace = true }
object_store = { workspace = true }

beacon-config = { path = "../beacon-config" }

[dev-dependencies]
tempfile = { workspace = true }