[package]
name = "beacon-object-storage"
version = "1.7.3"
edition = "2024"

[dependencies]
smol_str = {workspace = true}
notify = {workspace = true}
radix_trie = {workspace = true}

parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
thiserror = { workspace = true }
object_store = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }