[package]
name = "beacon-output"
version = "1.0.0"
edition = "2021"

[dependencies]
tempfile = { workspace=true}
indexmap = { workspace = true }
datafusion = { workspace=true}
arrow = { workspace=true}
tokio = { workspace = true }
anyhow = { workspace=true}
futures = { workspace=true}
futures-util = { workspace=true}
serde = { workspace=true}
utoipa = { workspace=true}
bytes = { workspace=true}
object_store = { workspace = true }


beacon-config = { path = "../beacon-config" }
beacon-arrow-netcdf = { path = "../beacon-arrow-netcdf" }
beacon-arrow-odv = { path = "../beacon-arrow-odv" }