[package]
name = "beacon-planner"
version = "1.1.0"
edition = "2024"

[dependencies]
utoipa = { workspace=true}
serde = { workspace=true}
serde_json = { workspace=true}
tokio = { workspace = true }
datafusion = { workspace=true}
tracing = { workspace=true}
anyhow = { workspace=true}
parking_lot = { workspace = true}
geojson = "0.24.2"
uuid = { version = "1.16.0", features = ["serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }

beacon-sources = { path = "../beacon-sources" }
beacon-output = { path = "../beacon-output" }
beacon-config = { path = "../beacon-config" }
beacon-functions = { path = "../beacon-functions" }
beacon-query = { path = "../beacon-query" }